Fix test names and disabled test reporting